# hipomama

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in~  configure  configure.ac
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/sbin/: Makefile.am  Makefile.in  hipomamad.c
